# swagger.json
@@ -12,15 +12,31 @@
     "https"
   ],
   "paths": {
-    "/": {
+    "/login": {
       "get": {
         "tags": [
-          "Welcome to my CRUD Operations project"
+          "Authentication"
         ],
-        "description": "",
+        "description": "This authentication uses the GitHub validation that redirects to a callback URL. Swagger UI, by default, doesn't handle authentication like logging through OAuth or other similar methods.<br>  1. Open a separate browser window or tab.<br>  2. Navigate to the /login route: http://localhost:3000/login <br>  3. The page will redirect you to the GitHub login page.<br>  4. Log in with your GitHub credentials.<br>  5. GitHub will redirect you back to the application's home page.",
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "404": {
+            "description": "FAILED"
+          }
+        }
+      }
+    },
+    "/logout": {
+      "get": {
+        "tags": [
+          "Authentication"
+        ],
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
           }
         }
       }
@@ -28,7 +44,7 @@
     "/notes/": {
       "get": {
         "tags": [
-            "CRUD Requests"
+          "CRUD Operations"
         ],
         "description": "",
         "produces": [
@@ -38,13 +54,21 @@
           "200": {
             "description": "OK"
           },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       },
       "post": {
-        "tags": ["CRUD Requests"],
+        "tags": [
+          "CRUD Operations"
+        ],
         "description": "",
         "parameters": [
           {
@@ -73,6 +97,9 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -81,7 +108,9 @@
     },
     "/notes/{id}": {
       "get": {
-        "tags": ["CRUD Requests"],
+        "tags": [
+          "CRUD Operations"
+        ],
         "description": "",
         "produces": [
           "application/json"
@@ -101,6 +130,9 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Not Found"
           },
@@ -110,7 +142,9 @@
         }
       },
       "put": {
-        "tags": ["CRUD Requests"],
+        "tags": [
+          "CRUD Operations"
+        ],
         "description": "",
         "produces": [
           "application/json"
@@ -148,13 +182,18 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       },
       "delete": {
-        "tags": ["CRUD Requests"],
+        "tags": [
+          "CRUD Operations"
+        ],
         "description": "",
         "parameters": [
           {
@@ -170,6 +209,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
